--- a/shard/Vagrantfile
+++ b/shard/Vagrantfile
@@ -5,8 +5,6 @@ Vagrant.configure("2") do |config|
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
 
-  config.vm.box = "ubuntu/bionic64"
-
   # config.vm.network "forwarded_port", guest: 80, host: 8080
   # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
   # config.vm.network "private_network", ip: "192.168.33.10"
@@ -14,14 +12,17 @@ Vagrant.configure("2") do |config|
 
   # config.vm.synced_folder "../data", "/vagrant_data"
 
+  config.vm.box = "ubuntu/bionic64"
+  config.vm.hostname = "mongo.local"
+
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "mongodb-course"
+    vb.name = "mongo-shard"
     vb.memory = 4096
-    vb.cpus = 2
   end
 
   config.vm.provision "shell", inline: <<-SHELL
     apt-get update
+    apt upgrade -y
     apt-get install -y gnupg
 
     wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | apt-key add -
